# django-example

./: .gitignore  pyproject.toml
config/: envs.py
djangoexample/djangoexample/: asgi.py  settings.py  urls.py  wsgi.py
djangoexample/ex_cms/: admin.py  apps.py  models.py
djangoexample/ex_cms/migrations/: 0001_initial.py  0002_cmsslider_cms_css.py
djangoexample/ex_crm/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djangoexample/ex_crm/migrations/: 0001_initial.py  0002_alter_order_options_alter_order_order_name_and_more.py  0003_statuscrm_order_order_status.py  0004_commentcrm.py
djangoexample/ex_crm/templates/ex_crm/: detail.html  form.html  index.html  list.html
djangoexample/ex_crm/templates/ex_crm/components/: table.html
djangoexample/price/: admin.py  models.py
djangoexample/price/migrations/: 0001_initial.py
djangoexample/templates/: base.html  corusel.html  index.html  navbar.html  price.html  thanks.html
